fix: address all remaining PR #10 review issues for release readiness
Critical/Major fixes:
- Fix entity_extraction validator to compute count unconditionally
- Fix pattern_matching node to use compatible operation types
- Add FSM error transitions for PATTERN_LEARNING and QUALITY_ASSESSMENT
- Fix asyncio.get_event_loop() deprecation in event_publisher
- Remove misleading json.JSONDecodeError from exception handling
- Properly await cancelled tasks in intelligence adapter

Type safety improvements:
- Add Literal types for Qdrant and extraction operations
- Add Enum types for operation_type fields in reducer/adapter
- Add entity_id format validation with regex pattern
- Add operation-specific input validation for performance/search ops

Documentation updates:
- Update CLAUDE.md with correct operation types and unified reducer
- Fix migration docs with accurate node inventory and paths
- Add TODO_TRACKING.md for comprehensive issue tracking
- Update README with correct omnibase-infra documentation

Infrastructure:
- Add lock file documentation to all Dockerfiles
- Consolidate entrypoint copy in multi-stage Dockerfile
- Fix __all__ ordering in audit module

Test improvements:
- Fix snake_case validation to reject underscore-only names
- Update fixture docstrings to match current behavior
- Add clearer assertion messages in linter tests

Contract validator:
- Remove redundant "version" from VERSION_FIELDS
- Eliminate duplicate isinstance checks

--- a/deployment/docker/Dockerfile
+++ b/deployment/docker/Dockerfile
@@ -25,7 +25,10 @@ RUN pip install --no-cache-dir uv==0.5.0
 # Set working directory
 WORKDIR /app
 
-# Copy project files (include lock file for reproducible builds)
+# Copy project files
+# Note: uv.lock* uses wildcard to make lock file optional. When present, it ensures
+# reproducible builds with exact dependency versions. When absent (e.g., during
+# development or CI without lock file), uv resolves dependencies from pyproject.toml.
 COPY pyproject.toml uv.lock* ./
 COPY src/ src/
 COPY deployment/ deployment/
@@ -33,6 +36,14 @@ COPY scripts/ scripts/
 
 # Install dependencies
 RUN uv pip install --system --no-cache -e .
+
+# ============================================================================
+# Entrypoint Setup (shared by all node stages)
+# ============================================================================
+# Copy entrypoint script to root and make executable once in base stage.
+# This avoids repetition in derived stages and ensures consistent signal handling.
+COPY deployment/docker/entrypoint-node.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
 
 # ============================================================================
 # Stage 2: Reducer
@@ -48,15 +59,12 @@ ENV OMNIINTELLIGENCE_ALLOW_DEFAULT_KAFKA=true
 # Expose health check port
 EXPOSE 8000
 
-# Copy and setup entrypoint script for proper signal handling
-COPY deployment/docker/entrypoint-node.sh /entrypoint.sh
-RUN chmod +x /entrypoint.sh
-
 # Health check - verifies the node's HTTP health endpoint is responding
 HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
     CMD curl -f http://localhost:8000/health || exit 1
 
 # Run reducer (canonical module path - no v1_0_0 versioning)
+# Note: Entrypoint script already copied in base stage for proper signal handling
 # Note: Runs in stub mode with health checks; full functionality requires
 # ONEX container injection via RuntimeHostProcess
 ENTRYPOINT ["/entrypoint.sh"]
@@ -76,15 +84,12 @@ ENV OMNIINTELLIGENCE_ALLOW_DEFAULT_KAFKA=true
 # Expose health check port
 EXPOSE 8000
 
-# Copy and setup entrypoint script for proper signal handling
-COPY deployment/docker/entrypoint-node.sh /entrypoint.sh
-RUN chmod +x /entrypoint.sh
-
 # Health check - verifies the node's HTTP health endpoint is responding
 HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
     CMD curl -f http://localhost:8000/health || exit 1
 
 # Run orchestrator (canonical module path - no v1_0_0 versioning)
+# Note: Entrypoint script already copied in base stage for proper signal handling
 # Note: Runs in stub mode with health checks; full functionality requires
 # ONEX container injection via RuntimeHostProcess
 ENTRYPOINT ["/entrypoint.sh"]
@@ -106,15 +111,12 @@ ENV OMNIINTELLIGENCE_ALLOW_DEFAULT_KAFKA=true
 # Expose health check port
 EXPOSE 8000
 
-# Copy and setup entrypoint script for proper signal handling
-COPY deployment/docker/entrypoint-node.sh /entrypoint.sh
-RUN chmod +x /entrypoint.sh
-
 # Health check - verifies the node's HTTP health endpoint is responding
 HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
     CMD curl -f http://localhost:8000/health || exit 1
 
 # Run compute node (canonical module path - no v1_0_0 versioning)
+# Note: Entrypoint script already copied in base stage for proper signal handling
 # Note: Runs in stub mode with health checks; full functionality requires
 # ONEX container injection via RuntimeHostProcess
 ENTRYPOINT ["/entrypoint.sh"]
@@ -136,15 +138,12 @@ ENV OMNIINTELLIGENCE_ALLOW_DEFAULT_KAFKA=true
 # Expose health check port
 EXPOSE 8000
 
-# Copy and setup entrypoint script for proper signal handling
-COPY deployment/docker/entrypoint-node.sh /entrypoint.sh
-RUN chmod +x /entrypoint.sh
-
 # Health check - verifies the node's HTTP health endpoint is responding
 HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
     CMD curl -f http://localhost:8000/health || exit 1
 
 # Run effect node (canonical module path - no v1_0_0 versioning)
+# Note: Entrypoint script already copied in base stage for proper signal handling
 # Note: Runs in stub mode with health checks; full functionality requires
 # ONEX container injection via RuntimeHostProcess
 ENTRYPOINT ["/entrypoint.sh"]
