fix: address all PR #10 review issues for release readiness (final)
Documentation:
- Update NODE_MAPPING_REFERENCE.md with accurate 21-node inventory
- Fix ONEX_MIGRATION_PLAN.md broken references and node inventory
- Clarify STUB implementation status across all compute nodes

Dependencies:
- Add missing runtime deps to pyproject.toml core group (pydantic, httpx, etc.)

Legacy Code:
- Align deprecation warnings to v2.0.0 timeline across _legacy modules
- Add clear migration guidance in deprecation messages

Type Safety:
- Add model type safety audit tests
- Enhance intelligence adapter stubs with missing attributes
- Fix processing time access in example_usage.py
- Simplify redundant error extraction in adapter effect

Contracts:
- Update orchestrator contract workflow node types
- Add metadata to pattern_matching_compute output fields
- Improve LOG_LEVEL parsing safety in qdrant_vector_effect

--- a/src/omniintelligence/nodes/intelligence_orchestrator/contract.yaml
+++ b/src/omniintelligence/nodes/intelligence_orchestrator/contract.yaml
@@ -50,18 +50,24 @@ workflow_coordination:
           description: "Receive intelligence operation request"
           step_config:
             event_pattern: ["intelligence.*"]
+        # Note: route_operation is an internal orchestration step, not a compute delegator.
+        # It routes based on operation_type to determine which compute/effect nodes to invoke.
         - node_id: "route_operation"
-          node_type: COMPUTE_GENERIC
+          node_type: ORCHESTRATOR_INTERNAL
           description: "Route operation based on EnumIntelligenceOperationType"
           depends_on: ["receive_request"]
           step_config:
             routing_field: "operation_type"
+            routing_strategy: "operation_type_match"
+        # Note: execute_compute is a dynamic dispatcher that invokes the appropriate
+        # compute node based on the routing decision from route_operation.
         - node_id: "execute_compute"
-          node_type: COMPUTE_GENERIC
-          description: "Execute compute node for operation"
+          node_type: ORCHESTRATOR_INTERNAL
+          description: "Dispatch to appropriate compute node based on operation routing"
           depends_on: ["route_operation"]
           step_config:
-            compute_nodes:
+            dispatch_strategy: "dynamic_compute_selection"
+            available_compute_nodes:
               - vectorization_compute
               - entity_extraction_compute
               - pattern_matching_compute
