fix: wrap long description line in pattern_matching_compute contract
Fixes yamlfmt pre-commit hook failure by wrapping the metadata_model
description line that exceeded the line length limit.

--- a/src/omniintelligence/nodes/pattern_matching_compute/contract.yaml
+++ b/src/omniintelligence/nodes/pattern_matching_compute/contract.yaml
@@ -41,7 +41,8 @@ operations:
 metadata_model:
   name: "ModelPatternMatchingMetadata"
   module: "omniintelligence.nodes.pattern_matching_compute.models"
-  description: "Typed metadata for pattern matching output (status, message, tracking_url, operation, etc.)"
+  description: "Typed metadata for pattern matching output (status, message, tracking_url, operation,
+    etc.)"
 # Protocol Dependencies (Future)
 # ==============================
 # Status: Backlog - Phase 3 (v0.4.0)
