--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -338,6 +338,7 @@ repos:
         additional_dependencies:
           - types-PyYAML
           - pydantic>=2.0.0
+          - omnibase-core>=0.9.1
 
   # ============================================================================
   # LOCAL HOOKS - Project-specific validators
