--- a/src/omniintelligence/nodes/intent_classifier_compute/contract.yaml
+++ b/src/omniintelligence/nodes/intent_classifier_compute/contract.yaml
@@ -154,26 +154,25 @@ configuration:
       max_domain_indicators: 5
 
 # =============================================================================
-# TODO(#15): Protocol Integration - IntentClassifierProtocol
+# TODO(OMN-1478): Protocol Integration - ProtocolIntentClassifier
 # =============================================================================
-# Status: Backlog - Phase 3 (v0.4.0)
-# Issue: https://github.com/OmniNode-ai/omniintelligence/issues/15
-# See also: docs/migrations/omniarchon_to_omniintelligence.md (Phase 3 - Protocols)
+# Status: Backlog
+# Issue: https://linear.app/omninode/issue/OMN-1478
 #
 # Priority: Low (current implementation functional without protocol abstraction)
-# Description: Create omniintelligence.protocols module with IntentClassifierProtocol
+# Description: Add ProtocolIntentClassifier to omnibase_spi
 #
 # When implemented:
-#   - Create omniintelligence.protocols.IntentClassifierProtocol
-#   - Define classify(), get_categories(), get_confidence() interface
+#   - Import from omnibase_spi.protocols.intelligence.ProtocolIntentClassifier
+#   - Node should implement the protocol interface
 #   - Uncomment dependency below
 # =============================================================================
 dependencies: []
-# Future dependency (when #15 is implemented):
+# Future dependency (when OMN-1478 is implemented):
 # - name: "intent_classifier"
 #   type: "protocol"
-#   module: "omniintelligence.protocols"
-#   description: "Intent classification engine"
+#   module: "omnibase_spi.protocols.intelligence"
+#   description: "Intent classification protocol from SPI"
 # Error Handling Configuration
 # ============================
 error_handling:
