--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,9 +50,8 @@ pre-commit = ">=4.5.0"
 
 [tool.poetry.group.core.dependencies]
 # ONEX ecosystem dependencies
-# Using local path dependencies for pre-release development
-# Version constraints use caret syntax: ^0.9.1 = >=0.9.1,<0.10.0
-omnibase-core = {path = "../omnibase_core", develop = true}
+# Version constraints use caret syntax: ^0.9.2 = >=0.9.2,<0.10.0
+omnibase-core = "^0.9.2"
 omnibase-spi = "^0.5.0"
 omnibase-infra = "^0.2.2"
 # Core runtime dependencies (also in base [tool.poetry.dependencies] for minimal installs)
@@ -186,14 +185,6 @@ all = [
     {include-group = "core"},
     {include-group = "dev"},
 ]
-
-# =============================================================================
-# UV SOURCES (Local/Editable Dependencies)
-# =============================================================================
-# For dependencies not yet published to PyPI, use local paths.
-# These are resolved by uv and point to parallel development directories.
-[tool.uv.sources]
-omnibase-core = { path = "../omnibase_core", editable = true }
 
 [tool.ruff]
 line-length = 88
