chore(OMN-1402): Update dependencies and add protocol ticket reference
- Bump omnibase-core to 0.9.5, omnibase-spi to 0.6.0, omnibase-infra to 0.2.4
- Update contract.yaml TODO to reference OMN-1580 for ProtocolPatternExtractor
- Verified ProtocolPatternExtractor does not yet exist in SPI 0.6.0

--- a/src/omniintelligence/nodes/pattern_extraction_compute/contract.yaml
+++ b/src/omniintelligence/nodes/pattern_extraction_compute/contract.yaml
@@ -138,10 +138,10 @@ configuration:
     tool_sequence_min_length: 2
 
 # =============================================================================
-# TODO(OMN-XXXX): Protocol Integration - ProtocolPatternExtractor
+# TODO(OMN-1580): Protocol Integration - ProtocolPatternExtractor
 # =============================================================================
 # Status: Backlog
-# Issue: TBD
+# Issue: https://linear.app/omninode/issue/OMN-1580
 #
 # Priority: Low (current implementation functional without protocol abstraction)
 # Description: Add ProtocolPatternExtractor to omnibase_spi
